--- a/inventory-service/src/main/resources/application.properties
+++ b/inventory-service/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+spring.application.name=inventory-service
+
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/inventory-service
 spring.datasource.username=root
@@ -8,5 +10,8 @@ spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.properties.hibernate.show_sql=true
 
+server.port=0
 
-server.port=8082
+# Config Eureka
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+
