--- a/order-service/src/main/resources/application.properties
+++ b/order-service/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+spring.application.name=order-service
+
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/order-service
 spring.datasource.username=root
@@ -8,5 +10,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.properties.hibernate.show_sql=true
 
-
 server.port=8081
+
+# Config Eureka
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
