--- a/product-service/src/main/resources/application.properties
+++ b/product-service/src/main/resources/application.properties
@@ -1,1 +1,6 @@
+spring.application.name=product-service
 spring.data.mongodb.uri=mongodb://localhost:27017/product-service
+server.port=8080
+
+# Config Eureka
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
