--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -26,6 +26,9 @@ spring.cloud.gateway.routes[3].id=discovery-server-static
 spring.cloud.gateway.routes[3].uri=http://localhost:8761
 spring.cloud.gateway.routes[3].predicates[0]=Path=/eureka/**
 
+#Spring Boot reads OpenId configuration and receives all it needs
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8181/realms/spring-boot-shop-realm
+
 
 
 
