--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 spring.application.name=api-gateway
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+
+#Provide username and password as part of url
+eureka.client.service-url.defaultZone=http://eureka:password@localhost:8761/eureka
 
 logging.level.root=INFO
 logging.level.org.springframework.cloud.gateway.route.RouteDefinitionLocator=INFO
