--- a/inventory-service/src/main/resources/application.properties
+++ b/inventory-service/src/main/resources/application.properties
@@ -12,6 +12,6 @@ spring.jpa.properties.hibernate.show_sql=true
 
 server.port=0
 
-# Config Eureka
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+# Config Eureka and provide username and password as part of url
+eureka.client.service-url.defaultZone=http://eureka:password@localhost:8761/eureka
 
