--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -31,6 +31,10 @@ spring.cloud.gateway.routes[3].predicates[0]=Path=/eureka/**
 #Spring Boot reads OpenId configuration and receives all it needs
 spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8181/realms/spring-boot-shop-realm
 
+#Zipkin distributed tracing
+spring.zipkin.base-url=http://localhost:9411
+spring.sleuth.sampler.probability=1.0
+
 
 
 
