--- a/product-service/src/main/resources/application.properties
+++ b/product-service/src/main/resources/application.properties
@@ -4,3 +4,7 @@ server.port=0
 
 # Config Eureka and provide username and password as part of url
 eureka.client.service-url.defaultZone=http://eureka:password@localhost:8761/eureka
+
+#Zipkin distributed tracing
+spring.zipkin.base-url=http://localhost:9411
+spring.sleuth.sampler.probability=1.0
