--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=api-gateway
 
 #Provide username and password as part of url
-eureka.client.service-url.defaultZone=http://eureka:password@localhost:8761/eureka
+eureka.client.serviceUrl.defaultZone=http://eureka:password@localhost:8761/eureka
 
 logging.level.root=INFO
 logging.level.org.springframework.cloud.gateway.route.RouteDefinitionLocator=INFO
@@ -29,7 +29,7 @@ spring.cloud.gateway.routes[3].uri=http://localhost:8761
 spring.cloud.gateway.routes[3].predicates[0]=Path=/eureka/**
 
 #Spring Boot reads OpenId configuration and receives all it needs
-spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8181/realms/spring-boot-shop-realm
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8181/realms/spring-boot-microservices-realm
 
 #Zipkin distributed tracing
 spring.zipkin.base-url=http://localhost:9411
