--- a/discovery-server/src/main/resources/application.properties
+++ b/discovery-server/src/main/resources/application.properties
@@ -1,10 +1,12 @@
+spring.application.name=discovery-server
 eureka.instance.hostname=localhost
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
 server.port=8761
 
-eureka.username=${EUREKA_USERNAME:eureka}
-eureka.password=${EUREKA_PASSWORD:password}
+eureka.username=eureka
+eureka.password=password
 
 #Zipkin distributed tracing
 spring.zipkin.base-url=http://localhost:9411
