--- a/inventory-service/src/main/resources/application.properties
+++ b/inventory-service/src/main/resources/application.properties
@@ -1,19 +1,17 @@
 spring.application.name=inventory-service
+server.port=0
 
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/inventory-service
-spring.datasource.username=root
-spring.datasource.password=1234
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://postgres:5432/inventory-service
+spring.datasource.username=postgres
+spring.datasource.password=password
 
 # Config Hibernate
 spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.properties.hibernate.show_sql=true
 
-server.port=0
-
 # Config Eureka and provide username and password as part of url
-eureka.client.service-url.defaultZone=http://eureka:password@localhost:8761/eureka
+eureka.client.serviceUrl.defaultZone=http://eureka:password@localhost:8761/eureka
 
 #Zipkin distributed tracing
 spring.zipkin.base-url=http://localhost:9411
