--- a/order-service/src/main/resources/application.properties
+++ b/order-service/src/main/resources/application.properties
@@ -13,7 +13,7 @@ spring.jpa.properties.hibernate.show_sql=true
 server.port=8081
 
 # Config Eureka and provide username and password as part of url
-eureka.client.service-url.defaultZone=http://eureka:password@localhost:8761/eureka
+eureka.client.serviceUrl.defaultZone=http://eureka:password@localhost:8761/eureka
 
 #Enable Circuit Breakers endpoints in actuator
 management.health.circuitbreakers.enabled=true
