--- a/product-service/src/main/resources/application.properties
+++ b/product-service/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.data.mongodb.uri=mongodb://localhost:27017/product-service
 server.port=0
 
 # Config Eureka and provide username and password as part of url
-eureka.client.service-url.defaultZone=http://eureka:password@localhost:8761/eureka
+eureka.client.serviceUrl.defaultZone=http://eureka:password@localhost:8761/eureka
 
 #Zipkin distributed tracing
 spring.zipkin.base-url=http://localhost:9411
