--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,7 @@
+---
 version: '3.7'
 services:
-  ## Postgres Docker Compose Config
+  ## Posgtres Docker Compose Config
   postgres-order:
     container_name: postgres-order
     image: postgres
@@ -10,7 +11,7 @@ services:
       POSTGRES_PASSWORD: password
       PGDATA: /data/postgres
     volumes:
-      - ./dbData/postgres-order:/data/postgres
+      - ./postgres-order:/data/postgres
     expose:
       - "5431"
     ports:
@@ -27,7 +28,7 @@ services:
       POSTGRES_PASSWORD: password
       PGDATA: /data/postgres
     volumes:
-      - ./dbData/postgres-inventory:/data/postgres
+      - ./postgres-inventory:/data/postgres
     ports:
       - "5432:5432"
     restart: always
@@ -42,14 +43,14 @@ services:
     expose:
       - "27017"
     volumes:
-      - ./dbData/mongo-data:/data/db
+      - ./mongo-data:/data/db
 
   ## Keycloak Config with Mysql database
   keycloak-mysql:
     container_name: keycloak-mysql
     image: mysql:5.7
     volumes:
-      - ./dbData/mysql_keycloak_data:/var/lib/mysql
+      - ./mysql_keycloak_data:/var/lib/mysql
     environment:
       MYSQL_ROOT_PASSWORD: root
       MYSQL_DATABASE: keycloak
@@ -75,16 +76,17 @@ services:
     depends_on:
       - keycloak-mysql
 
-  #Kafka config
   zookeeper:
-    image: confluentinc/cp-zookeeper:7.3.0
+    image: confluentinc/cp-zookeeper:7.0.1
     container_name: zookeeper
+    ports:
+      - "2181:2181"
     environment:
       ZOOKEEPER_CLIENT_PORT: 2181
       ZOOKEEPER_TICK_TIME: 2000
 
   broker:
-    image: confluentinc/cp-kafka:7.3.0
+    image: confluentinc/cp-kafka:7.0.1
     container_name: broker
     ports:
       - "9092:9092"
@@ -99,7 +101,7 @@ services:
       KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
       KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 1
 
-  # Zipkin
+  ## Zipkin
   zipkin:
     image: openzipkin/zipkin
     container_name: zipkin
@@ -110,7 +112,6 @@ services:
   discovery-server:
     image: alexjelia/discovery-server:latest
     container_name: discovery-server
-    pull_policy: always
     ports:
       - "8761:8761"
     environment:
@@ -121,7 +122,6 @@ services:
   api-gateway:
     image: alexjelia/api-gateway:latest
     container_name: api-gateway
-    pull_policy: always
     ports:
       - "8181:8080"
     expose:
@@ -138,7 +138,6 @@ services:
   product-service:
     container_name: product-service
     image: alexjelia/product-service:latest
-    pull_policy: always
     environment:
       - SPRING_PROFILES_ACTIVE=docker
     depends_on:
@@ -150,7 +149,6 @@ services:
   order-service:
     container_name: order-service
     image: alexjelia/order-service:latest
-    pull_policy: always
     environment:
       - SPRING_PROFILES_ACTIVE=docker
       - SPRING_DATASOURCE_URL=jdbc:postgresql://postgres-order:5431/order-service
@@ -165,7 +163,6 @@ services:
   inventory-service:
     container_name: inventory-service
     image: alexjelia/inventory-service:latest
-    pull_policy: always
     environment:
       - SPRING_PROFILES_ACTIVE=docker
       - SPRING_DATASOURCE_URL=jdbc:postgresql://postgres-inventory:5432/inventory-service
@@ -178,7 +175,6 @@ services:
   notification-service:
     container_name: notification-service
     image: alexjelia/notification-service:latest
-    pull_policy: always
     environment:
       - SPRING_PROFILES_ACTIVE=docker
     depends_on:
@@ -186,3 +182,32 @@ services:
       - broker
       - discovery-server
       - api-gateway
+
+  ## Prometheus
+  prometheus:
+    image: prom/prometheus:v2.37.1
+    container_name: prometheus
+    restart: always
+    ports:
+      - "9090:9090"
+    volumes:
+      - ./prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
+    depends_on:
+      - product-service
+      - inventory-service
+      - order-service
+      - notification-service
+
+  grafana:
+    image: grafana/grafana-oss:8.5.2
+    container_name: grafana
+    restart: always
+    ports:
+      - "3000:3000"
+    links:
+      - prometheus:prometheus
+    volumes:
+      - ./grafana:/var/lib/grafana
+    environment:
+      - GF_SECURITY_ADMIN_USER=admin
+      - GF_SECURITY_ADMIN_PASSWORD=password
