--- a/inventory-service/src/main/resources/application.properties
+++ b/inventory-service/src/main/resources/application.properties
@@ -1,19 +1,12 @@
-spring.application.name=inventory-service
-server.port=0
-
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://postgres:5432/inventory-service
-spring.datasource.username=postgres
-spring.datasource.password=password
-
-# Config Hibernate
 spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.properties.hibernate.show_sql=true
-
-# Config Eureka and provide username and password as part of url
+server.port=0
+spring.datasource.url=jdbc:postgresql://postgres:5432/inventory-service
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.username=postgres
+spring.datasource.password=1234
 eureka.client.serviceUrl.defaultZone=http://eureka:password@localhost:8761/eureka
-
-#Zipkin distributed tracing
+spring.application.name=inventory-service
 spring.zipkin.base-url=http://localhost:9411
 spring.sleuth.sampler.probability=1.0
-
+# Actuator Prometheus Endpoint
+management.endpoints.web.exposure.include= prometheus
