--- a/order-service/src/main/resources/application.properties
+++ b/order-service/src/main/resources/application.properties
@@ -1,27 +1,18 @@
-spring.application.name=order-service
-
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/order-service
-spring.datasource.username=root
+spring.datasource.url=jdbc:postgresql://postgres:5431/inventory-service
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.username=postgres
 spring.datasource.password=1234
-
-# Config Hibernate
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
-spring.jpa.properties.hibernate.show_sql=true
 
 server.port=8081
-
-# Config Eureka and provide username and password as part of url
 eureka.client.serviceUrl.defaultZone=http://eureka:password@localhost:8761/eureka
+spring.application.name=order-service
 
-#Enable Circuit Breakers endpoints in actuator
 management.health.circuitbreakers.enabled=true
-#Actuator will expose all kinds of endpoints
 management.endpoints.web.exposure.include=*
 management.endpoint.health.show-details=always
 
-#Resilience4j properties
+#Resilinece4j Properties
 resilience4j.circuitbreaker.instances.inventory.registerHealthIndicator=true
 resilience4j.circuitbreaker.instances.inventory.event-consumer-buffer-size=10
 resilience4j.circuitbreaker.instances.inventory.slidingWindowType=COUNT_BASED
@@ -38,13 +29,12 @@ resilience4j.timelimiter.instances.inventory.timeout-duration=3s
 resilience4j.retry.instances.inventory.max-attempts=3
 resilience4j.retry.instances.inventory.wait-duration=5s
 
-#Zipkin distributed tracing
 spring.zipkin.base-url=http://localhost:9411
-spring.sleuth.sampler.probability=1.0
+spring.sleuth.sampler.probability= 1.0
 
-#Kafka properties
+# Kafka Properties
 spring.kafka.bootstrap-servers=localhost:9092
 spring.kafka.template.default-topic=notificationTopic
-spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
 spring.kafka.producer.properties.spring.json.type.mapping=event:com.app.orderservice.event.OrderPlacedEvent
