--- a/inventory-service/src/main/resources/application.properties
+++ b/inventory-service/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.jpa.hibernate.ddl-auto=create-drop
-server.port=0
-spring.datasource.url=jdbc:postgresql://postgres:5432/inventory-service
+server.port=8082
+spring.datasource.url=jdbc:postgresql://localhost:5432/inventory-service
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=postgres
 spring.datasource.password=1234
