--- a/order-orchestrator/src/main/resources/application.properties
+++ b/order-orchestrator/src/main/resources/application.properties
@@ -1,2 +1,6 @@
 # Kafka Properties
 spring.kafka.bootstrap-servers=localhost:9092
+
+
+eureka.client.serviceUrl.defaultZone=http://eureka:password@localhost:8761/eureka
+spring.application.name=order-service
