--- a/notification-service/src/main/resources/application.properties
+++ b/notification-service/src/main/resources/application.properties
@@ -7,16 +7,16 @@ spring.zipkin.base-url=http://localhost:9411/
 spring.sleuth.sampler.probability=1
 
 # Kafka Properties
-#spring.kafka.bootstrap-servers=localhost:9092
-#spring.kafka.template.default-topic=notificationTopic
-#spring.kafka.consumer.group-id= notificationId
-#spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
-#spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
-#spring.kafka.consumer.properties.spring.json.type.mapping=event:com.app.notificationservice.OrderPlacedEvent
-
-
-# Kafka Properties
 spring.kafka.bootstrap-servers=localhost:9092
 
 # Actuator Prometheus Endpoint
 management.endpoints.web.exposure.include= prometheus
+
+#Mail
+spring.mail.host= mailhog
+spring.mail.port= 1025
+spring.mail.properties.mail.smtp.auth= false
+spring.mail.properties.mail.smtp.starttls.enable= false
+spring.mail.addresses.from= shop@app.com
+spring.mail.addresses.replyTo= no-reply@app.com
+
