--- a/order-orchestrator/src/main/resources/application.properties
+++ b/order-orchestrator/src/main/resources/application.properties
@@ -1,5 +1,9 @@
-# Kafka Properties
-spring.kafka.bootstrap-servers=localhost:9092
-
 eureka.client.serviceUrl.defaultZone=http://eureka:password@localhost:8761/eureka
-spring.application.name=order-service
+spring.application.name=orchestrator
+server.port=0
+
+spring.sleuth.integration.enabled=true
+spring.zipkin.base-url=http://localhost:9411/
+spring.sleuth.sampler.probability=1.0
+# Actuator Prometheus Endpoint
+management.endpoints.web.exposure.include= prometheus
