--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -27,3 +27,15 @@ scrape_configs:
       - targets: ['notification-service:8080']
         labels:
           application: 'Notification Service Application'
+  - job_name: 'orchestrator'
+    metrics_path: '/actuator/prometheus'
+    static_configs:
+      - targets: [ 'orchestrator:8080' ]
+        labels:
+          application: 'Orchestrator Service Application'
+  - job_name: 'payment-service'
+    metrics_path: '/actuator/prometheus'
+    static_configs:
+      - targets: [ 'payment-service:8080' ]
+        labels:
+          application: 'Payment Service Service Application'
