--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -30,6 +30,11 @@ spring.cloud.gateway.routes[4].id=inventory-service
 spring.cloud.gateway.routes[4].uri=lb://inventory-service
 spring.cloud.gateway.routes[4].predicates[0]=Path=/api/inventory/**
 
+## Payment Service Route
+spring.cloud.gateway.routes[5].id=payment-service
+spring.cloud.gateway.routes[5].uri=lb://payment-service
+spring.cloud.gateway.routes[5].predicates[0]=Path=/api/payment/balance/**
+
 spring.security.oauth2.resourceserver.jwt.issuer-uri= http://localhost:8181/realms/spring-boot-microservices-realm
 
 spring.zipkin.base-url=http://localhost:9411
