--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -169,10 +169,6 @@ services:
   payment-service:
     container_name: payment-service
     image: alexjelia/payment-service:latest
-    ports:
-      - "8083:8083"
-    expose:
-      - "8083"
     environment:
       - SPRING_PROFILES_ACTIVE=docker
     depends_on:
@@ -197,10 +193,6 @@ services:
   inventory-service:
     container_name: inventory-service
     image: alexjelia/inventory-service:latest
-    ports:
-      - "8082:8082"
-    expose:
-      - "8082"
     environment:
       - SPRING_PROFILES_ACTIVE=docker
       - SPRING_DATASOURCE_URL=jdbc:postgresql://postgres-inventory:5432/inventory-service
@@ -233,7 +225,9 @@ services:
     depends_on:
       - product-service
       - inventory-service
+      - payment-service
       - order-service
+      - orchestrator
       - notification-service
 
   grafana:
