--- a/order-service/src/main/resources/application.properties
+++ b/order-service/src/main/resources/application.properties
@@ -13,6 +13,10 @@ spring.sleuth.sampler.probability= 1.0
 # Kafka Properties
 spring.kafka.bootstrap-servers=localhost:9092
 
+# Actuator Prometheus Endpoint
+management.endpoints.web.exposure.include= prometheus
+
+
 
 
 
